--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "NODE_ENV=development nodemon ./bin/www",
+    "test-server": "NODE_ENV=test nodemon ./bin/www"
   },
   "dependencies": {
     "axios": "^0.20.0",
